# VulkanRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CppProperties.json  README.md  VulkanRenderer.sln  imgui.ini  render_settings.json  settings.json  terrain_settings.json
VulkanRenderer/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  ImGui.hpp  ImGuiImpl.cpp  ImGuiImpl.h  InstancedSceneObject.cpp  InstancedSceneObject.h  Logger.h  MemoryPool.h  Mesh.cpp  Mesh.h  NodeGraph.cpp  NodeGraph.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  TerGenNodeGraph.cpp  TerGenNodeGraph.h  Terrain.cpp  Terrain.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainManager.cpp  TerrainManager.h  Texture.cpp  Texture.h  TimeManager.cpp  TimeManager.h  VulkanApp.cpp  VulkanApp.h  VulkanBuffer.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInitializers.hpp  VulkanModel.hpp  VulkanPipeline.cpp  VulkanPipeline.h  (+11 more)
VulkanRenderer/ImGui/: imgui.h
VulkanRenderer/Shaders/: Seascape.frag  Seascape.frag.spv  Seascape.vert  Seascape.vert.spv  compile.bat  frag.spv  gameObject_shader.frag  gameObject_shader.frag.spv  gameObject_shader.vert  instancedSceneObject.frag  normalVecDebug.frag  normalVecDebug.frag.spv  normalVecDebug.geom  normalVecDebug.geom.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  skybox.vert  skybox.vert.spv  terrain.frag  terrain.frag.spv  terrain.vert.spv  ui.vert  water.frag  water.frag.spv  water.vert  water.vert.spv
assets/: TextureList.json  asset_db.json  shader_db.json  texture_db.json
assets/graphs/: default_terrain.json  graph.json
assets/shaders/: Seascape.frag  Seascape.frag.spv  Seascape.vert  Seascape.vert.spv  compile.bat  gameObject_shader.frag  gameObject_shader.frag.spv  gameObject_shader.vert  gameObject_shader.vert.spv  instancedSceneObject.frag  instancedSceneObject.frag.spv  instancedSceneObject.vert  instancedSceneObject.vert.spv  normalVecDebug.frag  normalVecDebug.frag.spv  normalVecDebug.geom.spv  normalVecDebug.vert  normalVecDebug.vert.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv  ui.frag  ui.frag.spv  ui.vert.spv  water.frag  water.frag.spv  water.vert  water.vert.spv
cmake/: FindGLFW.cmake  FindGLM.cmake
editor/: CMakeLists.txt  Editor.cpp  Editor.h  InternalGraph.cpp  InternalGraph.h  ProcTerrainNodeGraph.cpp  ProcTerrainNodeGraph.h
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  Engine.cpp  Engine.h  Input.cpp  Input.h  JobSystem.cpp  JobSystem.h  Logger.cpp  Logger.h  OpenXR.cpp  OpenXR.h  Time.cpp  Time.h  TimeManager.cpp  TimeManager.h  Window.cpp  Window.h  main.cpp
engine/rendering/: AsyncTask.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  DoubleBuffer.cpp  DoubleBuffer.h  FrameData.cpp  FrameData.h  FrameGraph.cpp  FrameGraph.h  FrameResources.h  ImGuiImpl.cpp  ImGuiImpl.h  ImGuiImplGLFW.h  Initializers.h  Lighting.cpp  Lighting.h  Model.h  Pipeline.cpp  Pipeline.h  RenderTools.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  ViewCamera.cpp  ViewCamera.h  Wrappers.cpp  Wrappers.h
engine/rendering/backend/: AsyncTask.cpp  AsyncTask.h  BackEnd.cpp  BackEnd.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  FrameResources.cpp  FrameResources.h  ImGuiImpl.cpp  ImGuiImplGLFW.cpp  Material.cpp  Material.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  RenderStructs.h  RenderTools.h  Shader.cpp  Shader.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Wrappers.cpp  Wrappers.h
engine/rendering/renderers/: CMakeLists.txt  FrameData.cpp  FrameData.h  Lighting.cpp  Lighting.h  MeshRenderer.cpp  MeshRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h
engine/resources/: CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Resource.cpp  Shader.h  (+6 more)
ext/: CMakeLists.txt
ext/imgui/: imgui.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  CoreTools.cpp  CoreTools.h  Gradient.cpp  Gradient.h  Input.cpp  Input.h  JobSystem.cpp  JobSystem.h  Logger.cpp  Logger.h  MemoryPool.cpp  MemoryPool.h  TimeManager.cpp  TimeManager.h  VulkanApp.cpp  VulkanApp.h  Window.cpp  Window.h  Window.hpp  main.cpp
src/gui/: CMakeLists.txt  ImGuiImpl.cpp  ImGuiImpl.h  InternalGraph.cpp  InternalGraph.h  NodeGraph.cpp  NodeGraph.h  ProcTerrainNodeGraph.cpp  ProcTerrainNodeGraph.h  TerGenNodeGraph.cpp  TerGenNodeGraph.h  tergennodegraph.cpp
src/rendering/: AsyncTask.cpp  AsyncTask.h  Buffer.cpp  Buffer.h  Buffer.hpp  CMakeLists.txt  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Device.hpp  DoubleBuffer.cpp  DoubleBuffer.h  FrameGraph.cpp  FrameGraph.h  FrameResources.cpp  FrameResources.h  ImGuiImpl.cpp  ImGuiImpl.h  Initializers.h  Initializers.hpp  Lighting.cpp  Lighting.h  Material.cpp  Material.h  Model.cpp  Model.h  Model.hpp  Pipeline.cpp  Pipeline.h  Pipeline.hpp  RenderPass.cpp  RenderPass.h  RenderStructs.h  RenderTools.cpp  RenderTools.h  Renderer.cpp  Renderer.h  Renderer.hpp  RendererStructs.h  (+37 more)
src/rendering/renderers/: CMakeLists.txt  SkyboxRenderer.cpp  SkyboxRenderer.h  renderable.h  skybox_renderer.cpp  skybox_renderer.h
src/resources/: Asset.h  CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshManager.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Sound.cpp  Sound.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/scene/: CMakeLists.txt  Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.h  GameObject.cpp  GameObject.h  InstancedSceneObject.cpp  InstancedSceneObject.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  TerrainGenerator.cpp  TerrainGenerator.h  TerrainManager.cpp  TerrainManager.h  Transform.cpp  Transform.h  Water.cpp  Water.h
src/util/: CMakeLists.txt  ConcurrentQueue.h  DoubleBuffer.h  FileWatcher.cpp  FileWatcher.h  Gradient.cpp  Gradient.h  MemoryPool.cpp  MemoryPool.h  PackedArray.h  RingBuffer.h  SimpleTimer.h
(+104 files in other folders)
